agregar cambios a paolag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1> Diana Cristina </h1>
-    <h1> Aleja saenz</h1>
+    <h2> Aleja saenz</h2>
+    <h2> paola g</h2>
+
     
 </body>
 </html>
